--- a/LoterestTcs.csproj
+++ b/LoterestTcs.csproj
@@ -57,8 +57,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Model\TableroJuego.cs" />
     <Compile Include="Ventanas\Menu.xaml.cs">
       <DependentUpon>Menu.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Ventanas\Tablero.xaml.cs">
+      <DependentUpon>Tablero.xaml</DependentUpon>
     </Compile>
     <Compile Include="Ventanas\Verificacion.xaml.cs">
       <DependentUpon>Verificacion.xaml</DependentUpon>
@@ -81,6 +85,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Ventanas\Menu.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Ventanas\Tablero.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -149,9 +157,7 @@
     <Resource Include="Recursos\tableroVacio.png" />
     <Resource Include="Recursos\usuario.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Cartas\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
@@ -181,6 +187,62 @@
       <Project>{9ca38adb-9437-42c1-b773-f7babda15edc}</Project>
       <Name>CorreoDeVerificacion</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Cartas\01 Estudiantes.png" />
+    <Resource Include="Cartas\02 Mochila.png" />
+    <Resource Include="Cartas\03 Profesor.png" />
+    <Resource Include="Cartas\04 Laptop.png" />
+    <Resource Include="Cartas\05 Libro.png" />
+    <Resource Include="Cartas\06 Colores.png" />
+    <Resource Include="Cartas\07 Reglas.png" />
+    <Resource Include="Cartas\08 Tijeras.png" />
+    <Resource Include="Cartas\09 Marcatextos.png" />
+    <Resource Include="Cartas\10 Pupitre.png" />
+    <Resource Include="Cartas\11 MemoriaUsb.png" />
+    <Resource Include="Cartas\12 Pantalla.png" />
+    <Resource Include="Cartas\13 Boligráfo.png" />
+    <Resource Include="Cartas\14 Hoja.png" />
+    <Resource Include="Cartas\15 Libreta.png" />
+    <Resource Include="Cartas\16 Nota.png" />
+    <Resource Include="Cartas\17 Ratón.png" />
+    <Resource Include="Cartas\18 Pinceles.png" />
+    <Resource Include="Cartas\19 Cuter.png" />
+    <Resource Include="Cartas\20 Audifonos.png" />
+    <Resource Include="Cartas\21 CintaAdhesiva.png" />
+    <Resource Include="Cartas\22 BoteDeBasura.png" />
+    <Resource Include="Cartas\23 Señalamientos.png" />
+    <Resource Include="Cartas\24 Proyector.png" />
+    <Resource Include="Cartas\25 Lentes.png" />
+    <Resource Include="Cartas\26 Celular.png" />
+    <Resource Include="Cartas\27 VideoJuego.png" />
+    <Resource Include="Cartas\28 BotellaDeAgua.png" />
+    <Resource Include="Cartas\29 Sandwich.png" />
+    <Resource Include="Cartas\30 Dulces.png" />
+    <Resource Include="Cartas\31 Calculadora.png" />
+    <Resource Include="Cartas\32 TablaPeriodica.png" />
+    <Resource Include="Cartas\33 Acordeón.png" />
+    <Resource Include="Cartas\34 Computadora.png" />
+    <Resource Include="Cartas\35 Transportador.png" />
+    <Resource Include="Cartas\36 Pizarrón.png" />
+    <Resource Include="Cartas\37 Mapa.png" />
+    <Resource Include="Cartas\38 CableHdmi.png" />
+    <Resource Include="Cartas\39 Compás.png" />
+    <Resource Include="Cartas\40 Cartulina.png" />
+    <Resource Include="Cartas\41 Plastilina.png" />
+    <Resource Include="Cartas\42 Televisión.png" />
+    <Resource Include="Cartas\43 Biblioteca.png" />
+    <Resource Include="Cartas\44 Aula.png" />
+    <Resource Include="Cartas\45 Director.png" />
+    <Resource Include="Cartas\46 Cancha.png" />
+    <Resource Include="Cartas\47 Jardín.png" />
+    <Resource Include="Cartas\48 Bicicleta.png" />
+    <Resource Include="Cartas\49 Caferería.png" />
+    <Resource Include="Cartas\50 Secretaria.png" />
+    <Resource Include="Cartas\51 Clip.png" />
+    <Resource Include="Cartas\52 Perro.png" />
+    <Resource Include="Cartas\53 Trofeo.png" />
+    <Resource Include="Cartas\54 Horario.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
