--- a/LoterestTcs.csproj
+++ b/LoterestTcs.csproj
@@ -61,6 +61,9 @@
     <Compile Include="Ventanas\Menu.xaml.cs">
       <DependentUpon>Menu.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Ventanas\SalaChat.xaml.cs">
+      <DependentUpon>SalaChat.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Ventanas\Tablero.xaml.cs">
       <DependentUpon>Tablero.xaml</DependentUpon>
     </Compile>
@@ -85,6 +88,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Ventanas\Menu.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Ventanas\SalaChat.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
